# amoeba

./: .travis.yml  BRANCHING.md  Bootstrap.hs  BootstrapServerMain.hs  Client.hs  ClientPool.hs  CmdArgParser.hs  DIFFICULTIES.md  DrawingServerMain.hs  LICENCE.md  LICENSE.md  Main.hs  Makefile  MessageClientMain.hs  README.md  Server.hs  Types.hs  Utilities.hs  amoeba.cabal  amoeba.cfg  amoeba.cfg.sample  makefile
doc/: 3cluster.dot  information_flow.dot  network_schema.dot  request_per_deficit_function.nb
src/: Bootstrap.hs  BootstrapServerMain.hs  Client.hs  ClientPool.hs  CmdArgParser.hs  DefaultConfig.hs  DrawingServerMain.hs  Housekeeping.hs  Main.hs  MainBootstrapServer.hs  MainDrawingServer.hs  MainMessageClient.hs  MainMulti.hs  MainNode.hs  Node.hs  NodePool.hs  Server.hs  Types.hs  Unsafe.hs  Utilities.hs
src/Config/: AddressParser.hs  CmdArgParser.hs  ConfigFile.hs  Default.hs  DefaultConfig.hs  Getter.hs  OptionModifier.hs  Verifier.hs  Verify.hs
src/Main/: Bootstrap.hs  BootstrapExecutable.hs  Drawing.hs  DrawingExecutable.hs  MessageClient.hs  Multi.hs  MultiExecutable.hs  Node.hs  NodeExecutable.hs
src/Types/: Config.hs  Lens.hs  Misc.hs  Signal.hs
src/Utilities/: Concurrency.hs  Databases.hs  Debug.hs  IOQueue.hs  Networking.hs  Unsafe.hs
util/: connections  draw_network_graph  hsloc  launch  list-todo
