name:                amoeba
version:             0.0.0.0
synopsis:            Decentralized network client and utilities to set it up and
                     investigate its behaviour
description:         Amœba is a program for setting up a decentralized network.
                     The name comes from the hope that eventually, the network
                     will be so robust that you can poke any of its parts
                     without endangering its overall integrity.
homepage:            https://github.com/quchen/amoeba
bug-reports:         https://github.com/quchen/amoeba/issues
license:             PublicDomain
license-file:        LICENCE.md
author:              David Luposchainsky <dluposchainsky@gmail.com>
maintainer:          David Luposchainsky <dluposchainsky@gmail.com>
category:            Cloud, Distributed Computing, Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
Extra-Source-Files:  README.md
                     DIFFICULTIES.md
                     doc/information_flow.dot
                     doc/information_flow.png
                     doc/network.dot
                     doc/network.png

source-repository head
      type:     git
      location: https://github.com/quchen/amoeba



library

      hs-source-dirs:   src
      ghc-options:      -O2 -W -threaded

      other-modules:    Bootstrap
                        ClientPool
                        Housekeeping
                        Node
                        Server
                        Client
                        CmdArgParser
                        Types
                        Utilities
      other-extensions: MultiWayIf
                        RankNTypes
                        LambdaCase
                        TupleSections
                        ViewPatterns
                        DeriveDataTypeable
                        DeriveGeneric
      build-depends:    base                 >=4.6  && <4.7  ,
                        stm                  >=2.4  && <2.5  ,
                        mtl                  >=2.1  && <2.2  ,
                        async                >=2.0  && <2.1  ,
                        containers           >=0.5  && <0.6  ,
                        pipes                >=4.0  && <4.1  ,
                        pipes-concurrency    >=2.0  && <2.1  ,
                        pipes-network        >=0.6  && <0.7  ,
                        binary               >=0.7  && <0.8  ,
                        bytestring           >=0.10 && <0.11 ,
                        pipes-binary         >=0.2  && <0.3  ,
                        network              >=2.4  && <2.5  ,
                        network-simple       >=0.3  && <0.4  ,
                        time                 >=1.4  && <1.5  ,
                        exceptions           >=0.3  && <0.4  ,
                        random               >=1.0  && <1.1  ,
                        optparse-applicative >=0.7  && <0.8
      default-language: Haskell2010
