name:                amoeba
version:             0.0.0.201404091
synopsis:            Decentralized network clsrc/ient and utilities to set it up and
                     investigate its behaviour
description:         Amœba is a program for setting up a decentralized network.
                     The name comes from the hope that eventually, the network
                     will be so robust that you can poke any of its parts
                     without endangering its overall integrity.
homepage:            https://github.com/quchen/amoeba
bug-reports:         https://github.com/quchen/amoeba/issues
license:             PublicDomain
license-file:        LICENCE.md
author:              David Luposchainsky <dluposchainsky(λ)gmail.com>
maintainer:          David Luposchainsky <dluposchainsky(λ)gmail.com>
category:            Cloud, Distributed Computing, Network
build-type:          Simple
cabal-version:       >=1.10
Stability:           alpha
Tested-With:         GHC == 7.8.1
extra-source-files:  BRANCHING.md
                     DIFFICULTIES.md
                     LICENCE.md
                     README.md
                     doc/information_flow.dot
                     doc/information_flow.png
                     doc/network_example.png
                     doc/network_schema.dot
                     doc/network_schema.png

source-repository head
      type:     git
      location: https://github.com/quchen/amoeba



library

      hs-source-dirs:   src
      ghc-options:      -O2 -W
      default-language: Haskell2010

      build-depends:   async                 == 2.0.*
                   ,   base                  == 4.7.*
                   ,   binary                == 0.7.*
                   ,   bytestring            == 0.10.*
                   ,   configurator          == 0.2.*
                   ,   containers            == 0.5.*
                   ,   exceptions            == 0.3.*
                   ,   lens-family-core      == 1.0.*
                   ,   mtl                   == 2.1.*
                   ,   network               == 2.4.*
                   ,   network-simple        == 0.3.*
                   ,   optparse-applicative  == 0.7.*
                   ,   parsec                == 3.1.*
                   ,   pipes                 == 4.1.*
                   ,   pipes-binary          == 0.4.*
                   ,   pipes-concurrency     == 2.0.*
                   ,   pipes-network         == 0.6.*
                   ,   pipes-parse           == 3.0.*
                   ,   random                == 1.0.*
                   ,   stm                   == 2.4.*
                   ,   text                  == 1.1.*
                   ,   time                  == 1.4.*

      exposed-modules: Main.Bootstrap
                   ,   Main.Drawing
                   ,   Main.Multi
                   ,   Main.Node

      other-modules:   Bootstrap
                   ,   Client
                   ,   ClientPool
                   ,   Config.AddressParser
                   ,   Config.CmdArgParser
                   ,   Config.ConfigFile
                   ,   Config.Default
                   ,   Config.Getter
                   ,   Config.OptionModifier
                   ,   Config.Verify
                   ,   Housekeeping
                   ,   Node
                   ,   NodePool
                   ,   Server
                   ,   Types
                   ,   Types.Config
                   ,   Types.Misc
                   ,   Types.Signal
                   ,   Utilities
                   ,   Utilities.Databases
                   ,   Utilities.Debug



executable amoeba
      build-depends:    amoeba, base
      default-language: Haskell2010
      main-is:          src/Main/NodeExecutable.hs

executable multi
      build-depends:    amoeba, base
      default-language: Haskell2010
      main-is:          src/Main/MultiExecutable.hs

executable bootstrap
      build-depends:    amoeba, base
      default-language: Haskell2010
      main-is:          src/Main/BootstrapExecutable.hs

executable drawing
      build-depends:    amoeba, base
      default-language: Haskell2010
      main-is:          src/Main/DrawingExecutable.hs
